[project]
name = "aiogram-echo-bot"
version = "0.1.0"
description = "Эхо-бот с кнопками"
authors = [{ name = "jesuszwer", email = "zakianovd001@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiogram (>=3.18.0,<4.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
]

[tool.ruff]
select = ["A", "F", "I", "T"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
